--- a/config/crd/bases/postgresql.cnpg.io_clusters.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_clusters.yaml
@@ -3715,6 +3715,11 @@ spec:
                       Set it to `true` if you don't want to inject default queries into the cluster.
                       Default: false.
                     type: boolean
+                  enableMetricsTLS:
+                    default: false
+                    description: Enable HTTPS for the metrics endpoint, (and if PodMonitor
+                      is enabled, also for PodMonitor)
+                    type: boolean
                   enablePodMonitor:
                     default: false
                     description: Enable or disable the `PodMonitor`
