feat: leverage auth_dbname for pooler
Signed-off-by: Philippe Scorsolini <p.scorsolini@gmail.com>

--- a/config/crd/bases/postgresql.cnpg.io_clusters.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_clusters.yaml
@@ -6060,6 +6060,8 @@ spec:
                     description: PgBouncerIntegrationStatus encapsulates the needed
                       integration for the pgbouncer poolers referencing the cluster
                     properties:
+                      authDBName:
+                        type: string
                       secrets:
                         items:
                           type: string
