--- a/config/crd/bases/postgresql.cnpg.io_poolers.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_poolers.yaml
@@ -320,6 +320,10 @@ spec:
               pgbouncer:
                 description: The PgBouncer configuration
                 properties:
+                  authDBName:
+                    description: 'The database name to use for the authentication
+                      query. Default: "postgres".'
+                    type: string
                   authQuery:
                     description: |-
                       The query that will be used to download the hash of the password
