feat: allow enforcing min sync replicas
This patch adds a new field called `enforceMinSyncReplicas` allowing the
user to request the number of synchronous replica specified in
`minSyncReplicas` even when the corresponding instances are not ready.

Signed-off-by: Leonardo Cecchi <leonardo.cecchi@enterprisedb.com>

--- a/config/crd/bases/postgresql.cnpg.io_clusters.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_clusters.yaml
@@ -3904,6 +3904,19 @@ spec:
                           is default
                         type: boolean
                     type: object
+                  minSyncReplicasEnforcement:
+                    description: |-
+                      MinSyncReplicasEnforcement describe how synchronous replication react
+                      to non-ready replicas. When not set or set to `preferred`, those
+                      replicas are not considered against the synchronous replication
+                      candidates, giving priority to the availability of the cluster.
+                      When set to `required`, non-ready replicas are considered
+                      synchronous replication candidates, giving priority to the
+                      consistency of the cluster over its availability.
+                    enum:
+                    - preferred
+                    - required
+                    type: string
                   parameters:
                     additionalProperties:
                       type: string
