chore: Add a watcher to catch all the cluster logs
We were using fluentd to capture the logs on every cluster, but this
is not needed anymore since we can watch on the cluster and capture
the logs using the Kubernetes API and decide which one we should keep
based on which tests failed.

Closes #5053

Signed-off-by: Jonathan Gonzalez V. <jonathan.gonzalez@enterprisedb.com>

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -793,6 +793,17 @@ jobs:
           retention-days: 7
           if-no-files-found: ignore
 
+      -
+        name: Archive e2e cluster logs
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: cluster-logs-${{ matrix.id }}
+          path: |
+            tests/e2e/clusters_logs/*
+          retention-days: 7
+          if-no-files-found: ignore
+
   # AKS Secrets required
   # secrets.AZURE_CREDENTIALS
   # secrets.AZURE_SUBSCRIPTION
