--- a/config/crd/bases/postgresql.cnpg.io_clusters.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_clusters.yaml
@@ -1649,6 +1649,53 @@ spec:
                         items:
                           type: string
                         type: array
+                      postInitSQLRefs:
+                        description: |-
+                          PostInitSQLRefs points references to ConfigMaps or Secrets which
+                          contain SQL files, the general implementation order to these references is
+                          from all Secrets to all ConfigMaps, and inside Secrets or ConfigMaps,
+                          the implementation order is same as the order of each array
+                          (by default empty)
+                        properties:
+                          configMapRefs:
+                            description: ConfigMapRefs holds a list of references
+                              to ConfigMaps
+                            items:
+                              description: |-
+                                ConfigMapKeySelector contains enough information to let you locate
+                                the key of a ConfigMap
+                              properties:
+                                key:
+                                  description: The key to select
+                                  type: string
+                                name:
+                                  description: Name of the referent.
+                                  type: string
+                              required:
+                              - key
+                              - name
+                              type: object
+                            type: array
+                          secretRefs:
+                            description: SecretRefs holds a list of references to
+                              Secrets
+                            items:
+                              description: |-
+                                SecretKeySelector contains enough information to let you locate
+                                the key of a Secret
+                              properties:
+                                key:
+                                  description: The key to select
+                                  type: string
+                                name:
+                                  description: Name of the referent.
+                                  type: string
+                              required:
+                              - key
+                              - name
+                              type: object
+                            type: array
+                        type: object
                       postInitTemplateSQL:
                         description: |-
                           List of SQL queries to be executed as a superuser in the `template1`
@@ -1657,6 +1704,53 @@ spec:
                         items:
                           type: string
                         type: array
+                      postInitTemplateSQLRefs:
+                        description: |-
+                          PostInitTemplateSQLRefs points references to ConfigMaps or Secrets which
+                          contain SQL files, the general implementation order to these references is
+                          from all Secrets to all ConfigMaps, and inside Secrets or ConfigMaps,
+                          the implementation order is same as the order of each array
+                          (by default empty)
+                        properties:
+                          configMapRefs:
+                            description: ConfigMapRefs holds a list of references
+                              to ConfigMaps
+                            items:
+                              description: |-
+                                ConfigMapKeySelector contains enough information to let you locate
+                                the key of a ConfigMap
+                              properties:
+                                key:
+                                  description: The key to select
+                                  type: string
+                                name:
+                                  description: Name of the referent.
+                                  type: string
+                              required:
+                              - key
+                              - name
+                              type: object
+                            type: array
+                          secretRefs:
+                            description: SecretRefs holds a list of references to
+                              Secrets
+                            items:
+                              description: |-
+                                SecretKeySelector contains enough information to let you locate
+                                the key of a Secret
+                              properties:
+                                key:
+                                  description: The key to select
+                                  type: string
+                                name:
+                                  description: Name of the referent.
+                                  type: string
+                              required:
+                              - key
+                              - name
+                              type: object
+                            type: array
+                        type: object
                       secret:
                         description: |-
                           Name of the secret containing the initial credentials for the
