docs: improve the description
Signed-off-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>

--- a/config/crd/bases/postgresql.cnpg.io_clusters.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_clusters.yaml
@@ -1596,10 +1596,11 @@ spec:
                         type: array
                       postInitApplicationSQLRefs:
                         description: |-
-                          PostInitApplicationSQLRefs points references to ConfigMaps or Secrets which
-                          contain SQL files, the general implementation order to these references is
-                          from all Secrets to all ConfigMaps, and inside Secrets or ConfigMaps,
-                          the implementation order is same as the order of each array
+                          PostInitApplicationSQLRefs holds references to ConfigMaps or Secrets
+                          containing SQL files. The references are processed in a specific order:
+                          first, all Secrets are processed, followed by all ConfigMaps.
+                          Within each group, the processing order follows the sequence specified
+                          in their respective arrays.
                           (by default empty)
                         properties:
                           configMapRefs:
@@ -1651,10 +1652,11 @@ spec:
                         type: array
                       postInitSQLRefs:
                         description: |-
-                          PostInitSQLRefs points references to ConfigMaps or Secrets which
-                          contain SQL files, the general implementation order to these references is
-                          from all Secrets to all ConfigMaps, and inside Secrets or ConfigMaps,
-                          the implementation order is same as the order of each array
+                          PostInitSQLRefs holds references to ConfigMaps or Secrets
+                          containing SQL files. The references are processed in a specific order:
+                          first, all Secrets are processed, followed by all ConfigMaps.
+                          Within each group, the processing order follows the sequence specified
+                          in their respective arrays.
                           (by default empty)
                         properties:
                           configMapRefs:
@@ -1706,10 +1708,11 @@ spec:
                         type: array
                       postInitTemplateSQLRefs:
                         description: |-
-                          PostInitTemplateSQLRefs points references to ConfigMaps or Secrets which
-                          contain SQL files, the general implementation order to these references is
-                          from all Secrets to all ConfigMaps, and inside Secrets or ConfigMaps,
-                          the implementation order is same as the order of each array
+                          PostInitTemplateSQLRefs holds references to ConfigMaps or Secrets
+                          containing SQL files. The references are processed in a specific order:
+                          first, all Secrets are processed, followed by all ConfigMaps.
+                          Within each group, the processing order follows the sequence specified
+                          in their respective arrays.
                           (by default empty)
                         properties:
                           configMapRefs:
