--- a/config/crd/bases/postgresql.cnpg.io_clusters.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_clusters.yaml
@@ -1324,12 +1324,11 @@ spec:
                           When not defined, WAL files will be stored uncompressed and may be
                           unencrypted in the object store, according to the bucket default policy.
                         properties:
-                          additionalCommandArgs:
+                          archiveAdditionalCommandArgs:
                             description: |-
-                              AdditionalCommandArgs represents additional arguments that can be appended
-                              to the 'barman-cloud-wal-archive' command-line invocation. These arguments
-                              provide flexibility to customize the backup process further according to
-                              specific requirements or configurations.
+                              Additional arguments that can be appended to the 'barman-cloud-wal-archive'
+                              command-line invocation. These arguments provide flexibility to customize
+                              the WAL archive process further, according to specific requirements or configurations.
 
 
                               Example:
@@ -1374,6 +1373,26 @@ spec:
                               value - with 1 being the minimum accepted value.
                             minimum: 1
                             type: integer
+                          restoreAdditionalCommandArgs:
+                            description: |-
+                              Additional arguments that can be appended to the 'barman-cloud-wal-restore'
+                              command-line invocation. These arguments provide flexibility to customize
+                              the WAL restore process further, according to specific requirements or configurations.
+
+
+                              Example:
+                              In a scenario where specialized backup options are required, such as setting
+                              a specific timeout or defining custom behavior, users can use this field
+                              to specify additional command arguments.
+
+
+                              Note:
+                              It's essential to ensure that the provided arguments are valid and supported
+                              by the 'barman-cloud-wal-restore' command, to avoid potential errors or unintended
+                              behavior during execution.
+                            items:
+                              type: string
+                            type: array
                         type: object
                     required:
                     - destinationPath
@@ -2669,12 +2688,11 @@ spec:
                             When not defined, WAL files will be stored uncompressed and may be
                             unencrypted in the object store, according to the bucket default policy.
                           properties:
-                            additionalCommandArgs:
+                            archiveAdditionalCommandArgs:
                               description: |-
-                                AdditionalCommandArgs represents additional arguments that can be appended
-                                to the 'barman-cloud-wal-archive' command-line invocation. These arguments
-                                provide flexibility to customize the backup process further according to
-                                specific requirements or configurations.
+                                Additional arguments that can be appended to the 'barman-cloud-wal-archive'
+                                command-line invocation. These arguments provide flexibility to customize
+                                the WAL archive process further, according to specific requirements or configurations.
 
 
                                 Example:
@@ -2719,6 +2737,26 @@ spec:
                                 value - with 1 being the minimum accepted value.
                               minimum: 1
                               type: integer
+                            restoreAdditionalCommandArgs:
+                              description: |-
+                                Additional arguments that can be appended to the 'barman-cloud-wal-restore'
+                                command-line invocation. These arguments provide flexibility to customize
+                                the WAL restore process further, according to specific requirements or configurations.
+
+
+                                Example:
+                                In a scenario where specialized backup options are required, such as setting
+                                a specific timeout or defining custom behavior, users can use this field
+                                to specify additional command arguments.
+
+
+                                Note:
+                                It's essential to ensure that the provided arguments are valid and supported
+                                by the 'barman-cloud-wal-restore' command, to avoid potential errors or unintended
+                                behavior during execution.
+                              items:
+                                type: string
+                              type: array
                           type: object
                       required:
                       - destinationPath
