--- a/config/crd/bases/postgresql.cnpg.io_clusters.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_clusters.yaml
@@ -1589,17 +1589,19 @@ spec:
                       postInitApplicationSQL:
                         description: |-
                           List of SQL queries to be executed as a superuser in the application
-                          database right after is created - to be used with extreme care
+                          database right after the cluster has been created - to be used with extreme care
                           (by default empty)
                         items:
                           type: string
                         type: array
                       postInitApplicationSQLRefs:
                         description: |-
-                          PostInitApplicationSQLRefs points references to ConfigMaps or Secrets which
-                          contain SQL files, the general implementation order to these references is
-                          from all Secrets to all ConfigMaps, and inside Secrets or ConfigMaps,
-                          the implementation order is same as the order of each array
+                          List of references to ConfigMaps or Secrets containing SQL files
+                          to be executed as a superuser in the application database right after
+                          the cluster has been created. The references are processed in a specific order:
+                          first, all Secrets are processed, followed by all ConfigMaps.
+                          Within each group, the processing order follows the sequence specified
+                          in their respective arrays.
                           (by default empty)
                         properties:
                           configMapRefs:
@@ -1643,20 +1645,118 @@ spec:
                         type: object
                       postInitSQL:
                         description: |-
-                          List of SQL queries to be executed as a superuser immediately
-                          after the cluster has been created - to be used with extreme care
+                          List of SQL queries to be executed as a superuser in the `postgres`
+                          database right after the cluster has been created - to be used with extreme care
                           (by default empty)
                         items:
                           type: string
                         type: array
+                      postInitSQLRefs:
+                        description: |-
+                          List of references to ConfigMaps or Secrets containing SQL files
+                          to be executed as a superuser in the `postgres` database right after
+                          the cluster has been created. The references are processed in a specific order:
+                          first, all Secrets are processed, followed by all ConfigMaps.
+                          Within each group, the processing order follows the sequence specified
+                          in their respective arrays.
+                          (by default empty)
+                        properties:
+                          configMapRefs:
+                            description: ConfigMapRefs holds a list of references
+                              to ConfigMaps
+                            items:
+                              description: |-
+                                ConfigMapKeySelector contains enough information to let you locate
+                                the key of a ConfigMap
+                              properties:
+                                key:
+                                  description: The key to select
+                                  type: string
+                                name:
+                                  description: Name of the referent.
+                                  type: string
+                              required:
+                              - key
+                              - name
+                              type: object
+                            type: array
+                          secretRefs:
+                            description: SecretRefs holds a list of references to
+                              Secrets
+                            items:
+                              description: |-
+                                SecretKeySelector contains enough information to let you locate
+                                the key of a Secret
+                              properties:
+                                key:
+                                  description: The key to select
+                                  type: string
+                                name:
+                                  description: Name of the referent.
+                                  type: string
+                              required:
+                              - key
+                              - name
+                              type: object
+                            type: array
+                        type: object
                       postInitTemplateSQL:
                         description: |-
                           List of SQL queries to be executed as a superuser in the `template1`
-                          after the cluster has been created - to be used with extreme care
+                          database right after the cluster has been created - to be used with extreme care
                           (by default empty)
                         items:
                           type: string
                         type: array
+                      postInitTemplateSQLRefs:
+                        description: |-
+                          List of references to ConfigMaps or Secrets containing SQL files
+                          to be executed as a superuser in the `template1` database right after
+                          the cluster has been created. The references are processed in a specific order:
+                          first, all Secrets are processed, followed by all ConfigMaps.
+                          Within each group, the processing order follows the sequence specified
+                          in their respective arrays.
+                          (by default empty)
+                        properties:
+                          configMapRefs:
+                            description: ConfigMapRefs holds a list of references
+                              to ConfigMaps
+                            items:
+                              description: |-
+                                ConfigMapKeySelector contains enough information to let you locate
+                                the key of a ConfigMap
+                              properties:
+                                key:
+                                  description: The key to select
+                                  type: string
+                                name:
+                                  description: Name of the referent.
+                                  type: string
+                              required:
+                              - key
+                              - name
+                              type: object
+                            type: array
+                          secretRefs:
+                            description: SecretRefs holds a list of references to
+                              Secrets
+                            items:
+                              description: |-
+                                SecretKeySelector contains enough information to let you locate
+                                the key of a Secret
+                              properties:
+                                key:
+                                  description: The key to select
+                                  type: string
+                                name:
+                                  description: Name of the referent.
+                                  type: string
+                              required:
+                              - key
+                              - name
+                              type: object
+                            type: array
+                        type: object
                       secret:
                         description: |-
                           Name of the secret containing the initial credentials for the
