--- a/config/crd/bases/postgresql.cnpg.io_clusters.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_clusters.yaml
@@ -6032,6 +6032,9 @@ spec:
                       items:
                         type: string
                       type: array
+                    status:
+                      description: Status the internal status of the plugin
+                      type: string
                     version:
                       description: |-
                         Version is the version of the plugin loaded by the
