chore: keep old naming convention
Signed-off-by: Niccolò Fei <niccolo.fei@enterprisedb.com>

--- a/.github/workflows/k8s-versions-check.yml
+++ b/.github/workflows/k8s-versions-check.yml
@@ -6,7 +6,7 @@
 # - EKS (Amazon Elastic Kubernetes Service): eks_versions.json
 # - OCP (OpenShift): openshift_versions.json
 
-name: Check for new K8s versions
+name: k8s-versions-check
 on:
   schedule:
     - cron: "30 0 * * *"
