docs: add preview version page
Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -67,6 +67,7 @@ nav:
   - faq.md
   - cloudnative-pg.v1.md
   - supported_releases.md
+  - preview_version.md
   - release_notes.md
   - Appendixes:
     - appendixes/object_stores.md
