chore(deps): automate update of Openshift supported versions (#5137)
Additionally, update the Makefile with the proper limits of the testing versions

Closes #5136

Signed-off-by: Jonathan Gonzalez V. <jonathan.gonzalez@enterprisedb.com>
Signed-off-by: Niccolò Fei <niccolo.fei@enterprisedb.com>
Signed-off-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>
Co-authored-by: Niccolò Fei <niccolo.fei@enterprisedb.com>
Co-authored-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>

--- a/.github/workflows/k8s-versions-check.yml
+++ b/.github/workflows/k8s-versions-check.yml
@@ -4,15 +4,16 @@
 # - GKE (Google Kubernetes Engine): gke_versions.json
 # - AKS (Azure Kubernetes Service): aks_versions.json
 # - EKS (Amazon Elastic Kubernetes Service): eks_versions.json
+# - OCP (OpenShift): openshift_versions.json
 
-name: public-cloud-k8s-versions-check
+name: k8s-versions-check
 on:
   schedule:
     - cron: "30 0 * * *"
   workflow_dispatch:
     inputs:
       limit:
-        description: 'Limit to the specified engines list (eks, aks, gke, kind)'
+        description: 'Limit to the specified engines list (eks, aks, gke, kind, ocp)'
         required: false
 
 permissions:
@@ -27,6 +28,7 @@ defaults:
 env:
   # The minimal k8s version supported, k8s version smaller than this one will be removed from vendor
   MINIMAL_K8S: "1.27"
+  MINIMAL_OCP: "4.12"
 
 jobs:
 
@@ -105,6 +107,19 @@ jobs:
           done | jq -Rs 'split("\n") | map(select(length>0)) | sort | reverse' | tee .github/kind_versions.json
         if: github.event.inputs.limit == null || github.event.inputs.limit == 'kind'
       -
+        name: Get updated OpenShift versions
+        run: |
+          curl -s https://mirror.openshift.com/pub/openshift-v4/clients/ocp/ | \
+          grep -e 'href.*"4\.1[2-9]\.[0-9].*"' | \
+          sed -e 's/\(.*\)href="\(4\.1[2-9]\)\(.*\)/\2/' | \
+          sort -Vru | \
+          awk -vv="$MINIMAL_OCP" '$0>=v {print $0}' | \
+          jq -Rn '[inputs]' | tee .github/openshift_versions.json
+
+          OCP_VERSIONS=`cat .github/openshift_versions.json | jq -r '"v"+.[-1]+"-v"+.[0]'`
+          sed -i -e 's/\(OPENSHIFT_VERSIONS ?= \)\(.*\)/\1'${OCP_VERSIONS}'/g' Makefile
+        if: github.event.inputs.limit == null || github.event.inputs.limit == 'ocp'
+      -
         name: Create Pull Request if versions have been updated
         uses: peter-evans/create-pull-request@v6
         with:
@@ -113,6 +128,8 @@ jobs:
           body: "Update the versions used to test the operator on public cloud providers"
           branch: "k8s-cloud-versions-update"
           author: "public-cloud-k8s-versions-check <public-cloud-k8s-versions-check@users.noreply.github.com>"
-          add-paths: ".github/"
+          add-paths: |
+            .github/**
+            Makefile
           commit-message: "feat: Updated public cloud k8s tested versions"
           signoff: true
