--- a/docs/src/samples/k9s/plugins.yml
+++ b/docs/src/samples/k9s/plugins.yml
@@ -1,4 +1,4 @@
-# Move/add to $XDG_CONFIG_HOME/k9s/plugin.yml
+# Move/add to $XDG_CONFIG_HOME/k9s/plugins.yaml
 # Requires the cnpg kubectl plugin. See https://cloudnative-pg.io/documentation/current/kubectl-plugin/
 #
 # Cluster actions:
