feat: enhanced API for synchronous replication (#5148)
Introducing an improved API for explicit synchronous replication
configuration, supporting quorum-based and priority list strategies.

This update allows full customization of the `synchronous_standby_names`
option, providing greater control and flexibility. The focus of this
patch is on data durability over high availability.

The previous synchronous replication method is now deprecated but will
continue to be supported until further notice, ensuring a smooth
transition.

Closes: #5095

Signed-off-by: Leonardo Cecchi <leonardo.cecchi@enterprisedb.com>
Signed-off-by: Armando Ruocco <armando.ruocco@enterprisedb.com>
Signed-off-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>
Signed-off-by: Niccolò Fei <niccolo.fei@enterprisedb.com>
Co-authored-by: Armando Ruocco <armando.ruocco@enterprisedb.com>
Co-authored-by: Gabriele Bartolini <gabriele.bartolini@enterprisedb.com>
Co-authored-by: Niccolò Fei <niccolo.fei@enterprisedb.com>

--- a/config/crd/bases/postgresql.cnpg.io_clusters.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_clusters.yaml
@@ -4103,6 +4103,54 @@ spec:
                     required:
                     - enabled
                     type: object
+                  synchronous:
+                    description: Configuration of the PostgreSQL synchronous replication
+                      feature
+                    properties:
+                      maxStandbyNamesFromCluster:
+                        description: |-
+                          Specifies the maximum number of local cluster pods that can be
+                          automatically included in the `synchronous_standby_names` option in
+                          PostgreSQL.
+                        type: integer
+                      method:
+                        description: |-
+                          Method to select synchronous replication standbys from the listed
+                          servers, accepting 'any' (quorum-based synchronous replication) or
+                          'first' (priority-based synchronous replication) as values.
+                        enum:
+                        - any
+                        - first
+                        type: string
+                      number:
+                        description: |-
+                          Specifies the number of synchronous standby servers that
+                          transactions must wait for responses from.
+                        type: integer
+                        x-kubernetes-validations:
+                        - message: The number of synchronous replicas should be greater
+                            than zero
+                          rule: self > 0
+                      standbyNamesPost:
+                        description: |-
+                          A user-defined list of application names to be added to
+                          `synchronous_standby_names` after local cluster pods (the order is
+                          only useful for priority-based synchronous replication).
+                        items:
+                          type: string
+                        type: array
+                      standbyNamesPre:
+                        description: |-
+                          A user-defined list of application names to be added to
+                          `synchronous_standby_names` before local cluster pods (the order is
+                          only useful for priority-based synchronous replication).
+                        items:
+                          type: string
+                        type: array
+                    required:
+                    - method
+                    - number
+                    type: object
                 type: object
               primaryUpdateMethod:
                 default: restart
