--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -66,6 +66,7 @@ nav:
   - faq.md
   - cloudnative-pg.v1.md
   - supported_releases.md
+  - preview_version.md
   - release_notes.md
   - Appendixes:
     - appendixes/object_stores.md
